<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_white_round_corder_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_permission"
            style="@style/textLatoBold_Black14ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_location"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/text_location"
                style="@style/textLatoRegular_Black14ssp"
                app:layout_constraintLeft_toRightOf="@+id/iv_location"
                app:layout_constraintTop_toTopOf="@+id/iv_location" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/textLatoRegular_Black10ssp"
                android:paddingRight="40dp"
                android:text="@string/text_location_rationale_message"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_location_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sms"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sms_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                style="@style/textLatoRegular_Black14ssp"
                android:text="@string/text_sms"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/iv_sms"
                app:layout_constraintTop_toTopOf="@+id/iv_sms" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sms_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/textLatoRegular_Black10ssp"
                android:paddingRight="40dp"
                android:text="@string/text_sms_rationale_message"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_sms_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sms_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_bottom_buttom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_do_it_later"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border_background"
                android:gravity="center"
                style="@style/textLatoSemiBold_Blue10ssp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/text_do_it_later" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_allow"
                android:layout_width="0dp"
                android:drawableRight="@drawable/ic_white_arrow_right"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/blue_filled_background"
                android:gravity="center"
                style="@style/textLatoSemiBold_White10ssp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/text_allow"
                android:textColor="@android:color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>